[package]
name = "shipyard_hierarchy"
version = "0.5.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Hierarchy for Shipyard Entity Component System"
keywords = ["ecs", "entity", "component", "hierarchy"]
categories = ["concurrency", "game-engines"]
readme = "README.md"
repository = "https://github.com/dakom/shipyard-hierarchy"

[dependencies]

#SOON: shipyard = { version = "^0.5", default-features = false}
[dependencies.shipyard]
git = "https://github.com/leudz/shipyard"
default-features = false

[dev-dependencies.shipyard]
git = "https://github.com/leudz/shipyard"
default-features = false
# Required for hierarchy tests that use World::new
features = ["std"]
